# ria-voice-ai-assistant

./: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  railway.toml  requirements.txt
.streamlit/: config.toml
app/api/: app.py  container.py
app/api/routes/: elevenlabs_webhooks.py  tools.py  webhooks.py
app/entities/: __init__.py  conversation.py  product.py
app/features/: __init__.py  conversation_feature.py
app/repositories/: __init__.py  memory_repository.py  session_repository.py
app/services/: __init__.py  bluestone_service.py  memory_service.py  phone.py  session_service.py  store_service.py  voice_service.py  whatsapp_service.py
app/shared/: __init__.py  config.py  exceptions.py  logging.py
docs/: EVAL_FRAMEWORK.md  SYSTEM_PROMPT.md  WRITEUP.md
eval/: __init__.py  dashboard.py  elevenlabs_api.py  rubric.py  store.py  validator.py
migrations/: env.py
migrations/versions/: 0001_init_memory.py
