[project]
name = "ria-voice-assistant"
version = "1.0.0"
description = "BlueStone voice AI jewelry consultant powered by ElevenLabs and Twilio"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "redis==5.2.1",
    "twilio==9.6.3",
    "httpx==0.28.1",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "elevenlabs==1.54.0",
]

[project.scripts]
ria = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["app", "main.py"]
